--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
     margin: 80px;
 }
 
+@media (max-width: 767.98px) {
+    body {
+        margin: 80px 0 0 0;
+    }
+}
+
 .fundo {
     background-image: linear-gradient(45deg, orange, gray);
     width: 80vw;
